// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RangeField > render correctly when the modelValue is not defined 1`] = `
<div class="sy-range-field">
  <!-- v-if -->
  <div class="
    mb-2
    mt-10
    mx-3
  ">
    <div class="
      mb-2
      mt-8
      wrapper
    ">
      <div class="track">
        <div
          aria-label="Minimum"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="thumb-min"
          role="slider"
          style="left: 0%;"
          tabindex="0"
          title="Minimum"
        >
          <div
            aria-hidden="true"
            class="thumb-outline"
          ></div>
          <div class="tooltip-wrapper">
            <div
              class="tooltip"
              style="
                transform: translateX(calc(-50% + 0px));
                transition: transform 0.1s;
              "
            >
              0
            </div>
          </div>
          <span class="inner-thumb"></span>
        </div>
        <div
          aria-label="Maximum"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="thumb-max"
          role="slider"
          style="left: 100%;"
          tabindex="0"
          title="Maximum"
        >
          <div
            aria-hidden="true"
            class="thumb-outline"
          ></div>
          <div class="tooltip-wrapper">
            <div
              class="tooltip"
              style="
                transform: translateX(calc(-50% + 0px));
                transition: transform 0.1s;
              "
            >
              100
            </div>
          </div>
          <span class="inner-thumb"></span>
        </div>
        <div
          aria-hidden="true"
          class="
            fake-thumb
            thumb-min
          "
          style="left: 0%;"
        >
          <div class="tooltip-wrapper">
            <div
              class="tooltip"
              style="transform: translateX(calc(-50% + 0px));"
            >
              0
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="
            fake-thumb
            thumb-max
          "
          style="left: 100%;"
        >
          <div class="tooltip-wrapper">
            <div
              class="tooltip"
              style="transform: translateX(calc(-50% + 0px));"
            >
              100
            </div>
          </div>
        </div>
        <div
          class="filled-track"
          style="
            left: 0%;
            width: 100%;
          "
        ></div>
      </div>
    </div>
  </div>
  <div class="
    d-flex
    flex-wrap
    max-width-none
  ">
    <div class="
      basic-field
      ma-3
      v-input
      v-input--center-affix
      v-input--density-default
      v-input--dirty
      v-input--horizontal
      v-locale--is-ltr
      v-text-field
      v-theme--light
    ">
      <!---->
      <div class="v-input__control">
        <div class="
          bg-white
          v-field
          v-field--active
          v-field--appended
          v-field--center-affix
          v-field--dirty
          v-field--has-background
          v-field--prepended
          v-field--variant-outlined
          v-locale--is-ltr
          v-theme--light
        ">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div
              aria-hidden="true"
              aria-valuemax="100"
              aria-valuemin="0"
              class="
                v-locale--is-ltr
                v-progress-linear
                v-theme--light
              "
              role="progressbar"
              style="
                top: 0px;
                height: 0px;
                --v-progress-linear-height: 2px;
              "
            >
              <!---->
              <div
                class="
                  bg-primary
                  v-progress-linear__background
                "
                style="opacity: NaN;"
              ></div>
              <div
                class="
                  bg-primary
                  v-progress-linear__buffer
                "
                style="
                  opacity: NaN;
                  width: 0%;
                "
              ></div>
              <transition-stub
                appear="false"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <div class="v-progress-linear__indeterminate">
                  <div class="
                    bg-primary
                    long
                    v-progress-linear__indeterminate
                  "></div>
                  <div class="
                    bg-primary
                    short
                    v-progress-linear__indeterminate
                  "></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <div class="v-field__prepend-inner">
            <!---->
            <!-- v-if -->
            <!-- v-if -->
          </div>
          <div
            class="v-field__field"
            data-no-activator=""
          >
            <!---->
            <label
              class="
                v-field-label
                v-label
              "
              for="input-v-1"
            >
              <!---->
              Valeur min
            </label>
            <!---->
            <input
              aria-label="Valeur min"
              autocomplete="off"
              class="v-field__input"
              id="input-v-1"
              inputmode="numeric"
              size="1"
              title="Valeur min"
              type="text"
              value="0"
            />
            <!---->
          </div>
          <!---->
          <div class="v-field__append-inner">
            <!-- v-if -->
            <!-- v-if -->
            <!---->
          </div>
          <div class="v-field__outline">
            <div class="v-field__outline__start"></div>
            <div class="v-field__outline__notch">
              <label
                aria-hidden="false"
                class="
                  v-field-label
                  v-field-label--floating
                  v-label
                "
                for="input-v-1"
              >
                <!---->
                Valeur min
              </label>
            </div>
            <div class="v-field__outline__end"></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!---->
    </div>
    <div class="
      basic-field
      ma-3
      v-input
      v-input--center-affix
      v-input--density-default
      v-input--dirty
      v-input--horizontal
      v-locale--is-ltr
      v-text-field
      v-theme--light
    ">
      <!---->
      <div class="v-input__control">
        <div class="
          bg-white
          v-field
          v-field--active
          v-field--appended
          v-field--center-affix
          v-field--dirty
          v-field--has-background
          v-field--prepended
          v-field--variant-outlined
          v-locale--is-ltr
          v-theme--light
        ">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div
              aria-hidden="true"
              aria-valuemax="100"
              aria-valuemin="0"
              class="
                v-locale--is-ltr
                v-progress-linear
                v-theme--light
              "
              role="progressbar"
              style="
                top: 0px;
                height: 0px;
                --v-progress-linear-height: 2px;
              "
            >
              <!---->
              <div
                class="
                  bg-primary
                  v-progress-linear__background
                "
                style="opacity: NaN;"
              ></div>
              <div
                class="
                  bg-primary
                  v-progress-linear__buffer
                "
                style="
                  opacity: NaN;
                  width: 0%;
                "
              ></div>
              <transition-stub
                appear="false"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <div class="v-progress-linear__indeterminate">
                  <div class="
                    bg-primary
                    long
                    v-progress-linear__indeterminate
                  "></div>
                  <div class="
                    bg-primary
                    short
                    v-progress-linear__indeterminate
                  "></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <div class="v-field__prepend-inner">
            <!---->
            <!-- v-if -->
            <!-- v-if -->
          </div>
          <div
            class="v-field__field"
            data-no-activator=""
          >
            <!---->
            <label
              class="
                v-field-label
                v-label
              "
              for="input-v-4"
            >
              <!---->
              Valeur max
            </label>
            <!---->
            <input
              aria-label="Valeur max"
              autocomplete="off"
              class="v-field__input"
              id="input-v-4"
              inputmode="numeric"
              size="1"
              title="Valeur max"
              type="text"
              value="100"
            />
            <!---->
          </div>
          <!---->
          <div class="v-field__append-inner">
            <!-- v-if -->
            <!-- v-if -->
            <!---->
          </div>
          <div class="v-field__outline">
            <div class="v-field__outline__start"></div>
            <div class="v-field__outline__notch">
              <label
                aria-hidden="false"
                class="
                  v-field-label
                  v-field-label--floating
                  v-label
                "
                for="input-v-4"
              >
                <!---->
                Valeur max
              </label>
            </div>
            <div class="v-field__outline__end"></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`RangeField > renders correctly 1`] = `
<div class="sy-range-field">
  <!-- v-if -->
  <div class="
    mb-2
    mt-10
    mx-3
  ">
    <div class="
      mb-2
      mt-8
      wrapper
    ">
      <div class="track">
        <div
          aria-label="Minimum"
          aria-orientation="horizontal"
          aria-valuemax="80"
          aria-valuemin="0"
          aria-valuenow="50"
          class="thumb-min"
          role="slider"
          style="left: 50%;"
          tabindex="0"
          title="Minimum"
        >
          <div
            aria-hidden="true"
            class="thumb-outline"
          ></div>
          <div class="tooltip-wrapper">
            <div
              class="tooltip"
              style="
                transform: translateX(calc(-50% + 0px));
                transition: transform 0.1s;
              "
            >
              50
            </div>
          </div>
          <span class="inner-thumb"></span>
        </div>
        <div
          aria-label="Maximum"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="50"
          aria-valuenow="80"
          class="thumb-max"
          role="slider"
          style="left: 80%;"
          tabindex="0"
          title="Maximum"
        >
          <div
            aria-hidden="true"
            class="thumb-outline"
          ></div>
          <div class="tooltip-wrapper">
            <div
              class="tooltip"
              style="
                transform: translateX(calc(-50% + 0px));
                transition: transform 0.1s;
              "
            >
              80
            </div>
          </div>
          <span class="inner-thumb"></span>
        </div>
        <div
          aria-hidden="true"
          class="
            fake-thumb
            thumb-min
          "
          style="left: 50%;"
        >
          <div class="tooltip-wrapper">
            <div
              class="tooltip"
              style="transform: translateX(calc(-50% + 0px));"
            >
              50
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="
            fake-thumb
            thumb-max
          "
          style="left: 80%;"
        >
          <div class="tooltip-wrapper">
            <div
              class="tooltip"
              style="transform: translateX(calc(-50% + 0px));"
            >
              80
            </div>
          </div>
        </div>
        <div
          class="filled-track"
          style="
            left: 50%;
            width: 30%;
          "
        ></div>
      </div>
    </div>
  </div>
  <div class="
    d-flex
    flex-wrap
    max-width-none
  ">
    <div class="
      basic-field
      ma-3
      v-input
      v-input--center-affix
      v-input--density-default
      v-input--dirty
      v-input--horizontal
      v-locale--is-ltr
      v-text-field
      v-theme--light
    ">
      <!---->
      <div class="v-input__control">
        <div class="
          bg-white
          v-field
          v-field--active
          v-field--appended
          v-field--center-affix
          v-field--dirty
          v-field--has-background
          v-field--prepended
          v-field--variant-outlined
          v-locale--is-ltr
          v-theme--light
        ">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div
              aria-hidden="true"
              aria-valuemax="100"
              aria-valuemin="0"
              class="
                v-locale--is-ltr
                v-progress-linear
                v-theme--light
              "
              role="progressbar"
              style="
                top: 0px;
                height: 0px;
                --v-progress-linear-height: 2px;
              "
            >
              <!---->
              <div
                class="
                  bg-primary
                  v-progress-linear__background
                "
                style="opacity: NaN;"
              ></div>
              <div
                class="
                  bg-primary
                  v-progress-linear__buffer
                "
                style="
                  opacity: NaN;
                  width: 0%;
                "
              ></div>
              <transition-stub
                appear="false"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <div class="v-progress-linear__indeterminate">
                  <div class="
                    bg-primary
                    long
                    v-progress-linear__indeterminate
                  "></div>
                  <div class="
                    bg-primary
                    short
                    v-progress-linear__indeterminate
                  "></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <div class="v-field__prepend-inner">
            <!---->
            <!-- v-if -->
            <!-- v-if -->
          </div>
          <div
            class="v-field__field"
            data-no-activator=""
          >
            <!---->
            <label
              class="
                v-field-label
                v-label
              "
              for="input-v-1"
            >
              <!---->
              Valeur min
            </label>
            <!---->
            <input
              aria-label="Valeur min"
              autocomplete="off"
              class="v-field__input"
              id="input-v-1"
              inputmode="numeric"
              size="1"
              title="Valeur min"
              type="text"
              value="50"
            />
            <!---->
          </div>
          <!---->
          <div class="v-field__append-inner">
            <!-- v-if -->
            <!-- v-if -->
            <!---->
          </div>
          <div class="v-field__outline">
            <div class="v-field__outline__start"></div>
            <div class="v-field__outline__notch">
              <label
                aria-hidden="false"
                class="
                  v-field-label
                  v-field-label--floating
                  v-label
                "
                for="input-v-1"
              >
                <!---->
                Valeur min
              </label>
            </div>
            <div class="v-field__outline__end"></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!---->
    </div>
    <div class="
      basic-field
      ma-3
      v-input
      v-input--center-affix
      v-input--density-default
      v-input--dirty
      v-input--horizontal
      v-locale--is-ltr
      v-text-field
      v-theme--light
    ">
      <!---->
      <div class="v-input__control">
        <div class="
          bg-white
          v-field
          v-field--active
          v-field--appended
          v-field--center-affix
          v-field--dirty
          v-field--has-background
          v-field--prepended
          v-field--variant-outlined
          v-locale--is-ltr
          v-theme--light
        ">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div
              aria-hidden="true"
              aria-valuemax="100"
              aria-valuemin="0"
              class="
                v-locale--is-ltr
                v-progress-linear
                v-theme--light
              "
              role="progressbar"
              style="
                top: 0px;
                height: 0px;
                --v-progress-linear-height: 2px;
              "
            >
              <!---->
              <div
                class="
                  bg-primary
                  v-progress-linear__background
                "
                style="opacity: NaN;"
              ></div>
              <div
                class="
                  bg-primary
                  v-progress-linear__buffer
                "
                style="
                  opacity: NaN;
                  width: 0%;
                "
              ></div>
              <transition-stub
                appear="false"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <div class="v-progress-linear__indeterminate">
                  <div class="
                    bg-primary
                    long
                    v-progress-linear__indeterminate
                  "></div>
                  <div class="
                    bg-primary
                    short
                    v-progress-linear__indeterminate
                  "></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <div class="v-field__prepend-inner">
            <!---->
            <!-- v-if -->
            <!-- v-if -->
          </div>
          <div
            class="v-field__field"
            data-no-activator=""
          >
            <!---->
            <label
              class="
                v-field-label
                v-label
              "
              for="input-v-4"
            >
              <!---->
              Valeur max
            </label>
            <!---->
            <input
              aria-label="Valeur max"
              autocomplete="off"
              class="v-field__input"
              id="input-v-4"
              inputmode="numeric"
              size="1"
              title="Valeur max"
              type="text"
              value="80"
            />
            <!---->
          </div>
          <!---->
          <div class="v-field__append-inner">
            <!-- v-if -->
            <!-- v-if -->
            <!---->
          </div>
          <div class="v-field__outline">
            <div class="v-field__outline__start"></div>
            <div class="v-field__outline__notch">
              <label
                aria-hidden="false"
                class="
                  v-field-label
                  v-field-label--floating
                  v-label
                "
                for="input-v-4"
              >
                <!---->
                Valeur max
              </label>
            </div>
            <div class="v-field__outline__end"></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`RangeField > renders correctly with value NaN 1`] = `
<div class="sy-range-field">
  <!-- v-if -->
  <div class="
    mb-2
    mt-10
    mx-3
  ">
    <div class="
      mb-2
      mt-8
      wrapper
    ">
      <div class="track">
        <div
          aria-label="Minimum"
          aria-orientation="horizontal"
          aria-valuemax="0"
          aria-valuemin="0"
          aria-valuenow="0"
          class="thumb-min"
          role="slider"
          style="left: 0%;"
          tabindex="0"
          title="Minimum"
        >
          <div
            aria-hidden="true"
            class="thumb-outline"
          ></div>
          <div class="tooltip-wrapper">
            <div
              class="tooltip"
              style="
                transform: translateX(calc(-50% + 0px));
                transition: transform 0.1s;
              "
            >
              0
            </div>
          </div>
          <span class="inner-thumb"></span>
        </div>
        <div
          aria-label="Maximum"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="thumb-max"
          role="slider"
          style="left: 0%;"
          tabindex="0"
          title="Maximum"
        >
          <div
            aria-hidden="true"
            class="thumb-outline"
          ></div>
          <div class="tooltip-wrapper">
            <div
              class="tooltip"
              style="
                transform: translateX(calc(-50% + 0px));
                transition: transform 0.1s;
              "
            >
              0
            </div>
          </div>
          <span class="inner-thumb"></span>
        </div>
        <div
          aria-hidden="true"
          class="
            fake-thumb
            thumb-min
          "
          style="left: 0%;"
        >
          <div class="tooltip-wrapper">
            <div
              class="tooltip"
              style="transform: translateX(calc(-50% + 0px));"
            >
              0
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="
            fake-thumb
            thumb-max
          "
          style="left: 0%;"
        >
          <div class="tooltip-wrapper">
            <div
              class="tooltip"
              style="transform: translateX(calc(-50% + 0px));"
            >
              0
            </div>
          </div>
        </div>
        <div
          class="filled-track"
          style="
            left: 0%;
            width: 0%;
          "
        ></div>
      </div>
    </div>
  </div>
  <div class="
    d-flex
    flex-wrap
    max-width-none
  ">
    <div class="
      basic-field
      ma-3
      v-input
      v-input--center-affix
      v-input--density-default
      v-input--dirty
      v-input--horizontal
      v-locale--is-ltr
      v-text-field
      v-theme--light
    ">
      <!---->
      <div class="v-input__control">
        <div class="
          bg-white
          v-field
          v-field--active
          v-field--appended
          v-field--center-affix
          v-field--dirty
          v-field--has-background
          v-field--prepended
          v-field--variant-outlined
          v-locale--is-ltr
          v-theme--light
        ">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div
              aria-hidden="true"
              aria-valuemax="100"
              aria-valuemin="0"
              class="
                v-locale--is-ltr
                v-progress-linear
                v-theme--light
              "
              role="progressbar"
              style="
                top: 0px;
                height: 0px;
                --v-progress-linear-height: 2px;
              "
            >
              <!---->
              <div
                class="
                  bg-primary
                  v-progress-linear__background
                "
                style="opacity: NaN;"
              ></div>
              <div
                class="
                  bg-primary
                  v-progress-linear__buffer
                "
                style="
                  opacity: NaN;
                  width: 0%;
                "
              ></div>
              <transition-stub
                appear="false"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <div class="v-progress-linear__indeterminate">
                  <div class="
                    bg-primary
                    long
                    v-progress-linear__indeterminate
                  "></div>
                  <div class="
                    bg-primary
                    short
                    v-progress-linear__indeterminate
                  "></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <div class="v-field__prepend-inner">
            <!---->
            <!-- v-if -->
            <!-- v-if -->
          </div>
          <div
            class="v-field__field"
            data-no-activator=""
          >
            <!---->
            <label
              class="
                v-field-label
                v-label
              "
              for="input-v-1"
            >
              <!---->
              Valeur min
            </label>
            <!---->
            <input
              aria-label="Valeur min"
              autocomplete="off"
              class="v-field__input"
              id="input-v-1"
              inputmode="numeric"
              size="1"
              title="Valeur min"
              type="text"
              value="0"
            />
            <!---->
          </div>
          <!---->
          <div class="v-field__append-inner">
            <!-- v-if -->
            <!-- v-if -->
            <!---->
          </div>
          <div class="v-field__outline">
            <div class="v-field__outline__start"></div>
            <div class="v-field__outline__notch">
              <label
                aria-hidden="false"
                class="
                  v-field-label
                  v-field-label--floating
                  v-label
                "
                for="input-v-1"
              >
                <!---->
                Valeur min
              </label>
            </div>
            <div class="v-field__outline__end"></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!---->
    </div>
    <div class="
      basic-field
      ma-3
      v-input
      v-input--center-affix
      v-input--density-default
      v-input--dirty
      v-input--horizontal
      v-locale--is-ltr
      v-text-field
      v-theme--light
    ">
      <!---->
      <div class="v-input__control">
        <div class="
          bg-white
          v-field
          v-field--active
          v-field--appended
          v-field--center-affix
          v-field--dirty
          v-field--has-background
          v-field--prepended
          v-field--variant-outlined
          v-locale--is-ltr
          v-theme--light
        ">
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div
              aria-hidden="true"
              aria-valuemax="100"
              aria-valuemin="0"
              class="
                v-locale--is-ltr
                v-progress-linear
                v-theme--light
              "
              role="progressbar"
              style="
                top: 0px;
                height: 0px;
                --v-progress-linear-height: 2px;
              "
            >
              <!---->
              <div
                class="
                  bg-primary
                  v-progress-linear__background
                "
                style="opacity: NaN;"
              ></div>
              <div
                class="
                  bg-primary
                  v-progress-linear__buffer
                "
                style="
                  opacity: NaN;
                  width: 0%;
                "
              ></div>
              <transition-stub
                appear="false"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <div class="v-progress-linear__indeterminate">
                  <div class="
                    bg-primary
                    long
                    v-progress-linear__indeterminate
                  "></div>
                  <div class="
                    bg-primary
                    short
                    v-progress-linear__indeterminate
                  "></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <div class="v-field__prepend-inner">
            <!---->
            <!-- v-if -->
            <!-- v-if -->
          </div>
          <div
            class="v-field__field"
            data-no-activator=""
          >
            <!---->
            <label
              class="
                v-field-label
                v-label
              "
              for="input-v-4"
            >
              <!---->
              Valeur max
            </label>
            <!---->
            <input
              aria-label="Valeur max"
              autocomplete="off"
              class="v-field__input"
              id="input-v-4"
              inputmode="numeric"
              size="1"
              title="Valeur max"
              type="text"
              value="0"
            />
            <!---->
          </div>
          <!---->
          <div class="v-field__append-inner">
            <!-- v-if -->
            <!-- v-if -->
            <!---->
          </div>
          <div class="v-field__outline">
            <div class="v-field__outline__start"></div>
            <div class="v-field__outline__notch">
              <label
                aria-hidden="false"
                class="
                  v-field-label
                  v-field-label--floating
                  v-label
                "
                for="input-v-4"
              >
                <!---->
                Valeur max
              </label>
            </div>
            <div class="v-field__outline__end"></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
</div>
`;
